--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <article class="rightmost">Join PyMass today.</article>
   </div>
   <button class="buttongoogle"><img src="google.png" height="20px"><a href="secondpage.html" class="secpage">	Sign up with google</a></button>
-  <button class="buttonapple"><img src="apple.png" height="20px"><a href="secondpage.html" class="secpage">		Sign up with google</a></button>
+  <button class="buttonapple"><img src="apple.png" height="20px"><a href="secondpage.html" class="secpage">		Sign up with apple</a></button>
   <button class="buttonnumber"><a href="secondpage.html" class="secpage">  Sign up with phone or email</a></button>
 
 
